syntax = "proto3";

package frostdb.snapshot.v1alpha1;

import "frostdb/table/v1alpha1/config.proto";

// FooterData is a message stored in the footer of a snapshot file that encodes
// data about the rest of the file.
message FooterData {
  repeated Table table_metadata = 1;
  // TxnMetadata is the user-defined metadata associated with the txn at which
  // this snapshot was performed.
  bytes txn_metadata = 2;
}

message Table {
  string name = 1;
  frostdb.table.v1alpha1.TableConfig config = 2;
  message TableBlock {
    bytes ulid = 1;
    int64 size = 2;
    uint64 min_tx = 3;
    uint64 prev_tx = 4;
  }
  TableBlock active_block = 3;
  repeated Granule granule_metadata = 4;
}

message Granule {
  repeated Part part_metadata = 1;
}

message Part {
  int64 start_offset = 1;
  int64 end_offset = 2;
  uint64 tx = 3;
  uint64 compaction_level = 4;
  enum Encoding {
    ENCODING_UNKNOWN = 0;
    ENCODING_PARQUET = 1;
    ENCODING_ARROW = 2;
  };
  Encoding encoding = 5;
}
